Changes in primecount-7.13, 2024-04-08

* Added AVX512 runtime dispatching for x86 CPUs.
* CMakeLists.txt: New WITH_MULTIARCH option (default ON).
* Sieve_count.cpp: New AVX512 popcount algorithm for x86 CPUs.
* Sieve_count.cpp: New ARM SVE popcount algorithm.
* int128.cmake: Improve int128_t support for Windows.

Changes in primecount-7.12, 2024-04-01

* CMakeLists.txt: Remove WITH_POPCNT=OFF option used to build a
  portable primecount binary. primecount is now portable by default.
* popcnt.hpp: On x86 & x64 CPUs enable CPUID POPCNT runtime
  check by default (unless user compiles with -mpopcnt).
* LoadBalancerAC.cpp: New dynamic/adaptive load balancing #67.
* LogarithmicIntegral.cpp: Fix infinite loop on Linux i386 #66.
* RiemannR.cpp: Fix infinite loop on Linux i386 #66.
* RiemannR.cpp: Faster and simpler RiemannR_inverse(x).
* test/Li.cpp: Add more tests.
* test/Riemann_R.cpp: Add more tests.
* fast_div.hpp: Get rid of make_smaller<T>::type hack.

Changes in primecount-7.11, 2024-03-11

* CMakeLists.txt: Detect Apple Silicon CPUs and disable libdivide since
  Apple Silicon CPUs have very fast integer division instructions.
* test/iroot.cpp: Fix musl libc issue.
* test/Li.cpp: Speed up test.
* Faster RiemannR(x) and RiemannR_inverse(x) implementations.
  https://github.com/kimwalisch/primesieve/pull/144
* Renamed option --Ri to: -R or --RiemannR.
* Renamed option --Ri-inverse to: --RiemannR-inverse.
* CmdOptions.cpp: Detect incompatible options.
* PiTable.cpp: Increase cache size to 2 KiB.
* Improve status output on Windows.
* Updated to latest primesieve-12.1 library.

Changes in primecount-7.10, 2024-01-08

* RiemannR.cpp: Fix integer overflows in Li_inverse(x) & Ri_inverse(x).
* cmake/OpenMP.cmake: Improve libatomic detection.
* .github/workflows/ci.yml: Port AppVeyor CI tests to GitHub Actions.
* Vector.hpp: Rename pod_vector to Vector and pod_array to Array.
* README.md: Add C & C++ API badges.
* Update to latest primesieve-11.2 library.
