@@ -1,10 +1,10 @@
 ///
 /// @file   int128_OpenMP_patch.hpp
 /// @brief  Add missing int128_t support for OpenMP multi-threading.
-///         This is mainly required on Windows when compiling with
-///         LLVM/Clang. Without these pragmas there will be
-///         "unresolved external symbol" linker errors for the
-///         following symbols: __atomic_load, __atomic_compare_exchange.
+///         This is mainly required for LLVM/Clang on both Linux
+///         and Windows. Without these pragmas there will often be
+///         "unresolved external symbol" linker errors for symbols
+///         like e.g. __atomic_load, __atomic_compare_exchange.
 ///
 /// Copyright (C) 2024 Kim Walisch, <kim.walisch@gmail.com>
 ///
@@ -15,7 +15,7 @@
 #ifndef INT128_OPENMP_PATCH_HPP
 #define INT128_OPENMP_PATCH_HPP
 
-/// Requires OpenMP >= 4.0
+// Requires OpenMP >= 4.0
 #pragma omp declare reduction(+: primecount::int128_t : omp_out += omp_in)
 
 #pragma omp declare reduction(+: primecount::uint128_t : omp_out += omp_in)
