@@ -3,7 +3,7 @@ file(GLOB files "*.cpp")
 foreach(file ${files})
     get_filename_component(binary_name ${file} NAME_WE)
     add_executable(${binary_name} ${file})
-    target_compile_definitions(${binary_name} PRIVATE "${HAVE_FLOAT128}" "${DISABLE_INT128}" "${ENABLE_DIV32}" "${ENABLE_ASSERT}" "${ENABLE_MULTIARCH_AVX512_BMI2}" "${ENABLE_INT128_STL_PATCH}")
+    target_compile_definitions(${binary_name} PRIVATE "${HAVE_FLOAT128}" "${DISABLE_INT128}" "${ENABLE_DIV32}" "${ENABLE_ASSERT}" "${ENABLE_MULTIARCH_AVX512_BMI2}" "${ENABLE_INT128_STL_PATCH}" "${ENABLE_INT128_OPENMP_PATCH}")
     target_link_libraries(${binary_name} primecount::primecount primesieve::primesieve "${LIB_OPENMP}" "${LIB_ATOMIC}")
     add_test(NAME ${binary_name} COMMAND ${binary_name})
 endforeach()
